--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
 
     
 
