--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
+<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="mbr-section content4 cid-ryzN14gpQ2" id="content4-r">
 
     
 
@@ -537,7 +537,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 98, 11);">
+    <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(7, 59, 76);">
     </div>
 
     <div class="container">
