--- a/page2.html
+++ b/page2.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="cid-rH9thjoZan" id="image3-1s">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="cid-rH9thjoZan" id="image3-1s">
 
     
 
