--- a/page2.html
+++ b/page2.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="cid-rH9thjoZan" id="image3-1s">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="cid-rH9thjoZan" id="image3-1s">
 
     
 
